<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context="com.ivan.tuanimodiario.paginaDeConsulta">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="215dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nombrePersona"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fechaNacimiento"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/colorId"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:ems="10"
            android:inputType="textPersonName"
            android:singleLine="false"
            android:text="@string/animal"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hombre" />

            <RadioButton
                android:id="@+id/radioButtonMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mujer" />
            <RadioButton
                android:id="@+id/radioButtonOtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Otros" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="55dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/botonInicio" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
